--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <section>
@@ -24,6 +25,11 @@
         </div>
         <h2 class="game--status"></h2>
         <button class="game--restart">Restart Game</button>
+        <h1 style=" font-family: Raleway;">coded with love by Anamemem Cyril</h1>
+        <a href="https://www.facebook.com/emem.cyril.14/"> <i class="fa fa-facebook" style="font-size: 40px;" aria-hidden="true"></i></a>
+       
+       <a href="https://twitter.com/Anamemem3"><i class="fa fa-twitter" style="font-size: 40px;" aria-hidden="true"></i></a> 
+        <a href="https://github.com/Anamemem"><i class="fa fa-github" style="font-size: 40px;" aria-hidden="true"></i></a>
     </section>
 
     <script src="script.js"></script>
