--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
         <h2 class="game--status"></h2>
         <button class="game--restart">Restart Game</button>
         <h1 style=" font-family: Raleway;">coded with love by Anamemem Cyril</h1>
-        <a href="https://www.facebook.com/emem.cyril.14/"> <i class="fa fa-facebook" style="font-size: 40px;" aria-hidden="true"></i></a>
+        
+        <a href="https://www.facebook.com/emem.cyril.14/"> <i class="fa fa-facebook" style="font-size: 40px; color: white;" aria-hidden="true"></i></a>
        
-       <a href="https://twitter.com/Anamemem3"><i class="fa fa-twitter" style="font-size: 40px;" aria-hidden="true"></i></a> 
-        <a href="https://github.com/Anamemem"><i class="fa fa-github" style="font-size: 40px;" aria-hidden="true"></i></a>
+       <a href="https://twitter.com/Anamemem3"><i class="fa fa-twitter" style="font-size: 40px; color: blue;" aria-hidden="true"></i></a> 
+        <a href="https://github.com/Anamemem"><i class="fa fa-github" style="font-size: 40px; color: black;" aria-hidden="true"></i></a>
     </section>
 
     <script src="script.js"></script>
